# simple-airports-analysis-v2

./: .gitignore  .mcp.json  .pre-commit-config.yaml  .sqlfluff  .sqlfluffignore  CHANGELOG.md  LICENSE  Makefile  README.md  pyproject.toml
.dlt/: config.toml
.github/workflows/: ci.yml  pages.yml  release.yml  snapshot.yml
dashboard/: chat.py  classic.py  dashboard.py
dashboard/public/: airports_my.csv  arrival_origins.csv  arrivals.csv  arrivals_daily.csv  congestion.csv  congestion_history.csv  distances.csv  meta.csv
dbt/: README.md  dbt_project.yml  profiles.yml
dbt/macros/: _macros.yml  haversine_km.sql
dbt/models/: overview.md
dbt/models/marts/: _exposures.yml  _marts.yml  _semantic.yml  _unit_tests.yml  dim_airports_my.sql  fct_airport_distances.sql  fct_arrival_origins.sql  fct_arrivals.sql  fct_arrivals_daily.sql  fct_congestion.sql  fct_congestion_history.sql  time_spine_daily.sql
dbt/models/staging/: _sources.yml  _staging.yml  stg_aircraft_states.sql  stg_aircraft_states_history.sql  stg_airports.sql  stg_arrivals.sql
dbt/tests/generic/: test_is_icao_code.sql  test_is_recent_epoch.sql
docs/: LEARNINGS.md
history/: aircraft_states.parquet  arrivals.parquet
history/aircraft_states/: 2026-07.parquet
history/arrivals/: 2026-07.parquet
pipelines/: flow.py  snapshot.py  sources.py
scripts/: build_landing.py  dbt_mcp.sh
seeds/: sample_aircraft_states.csv
